@@ -4,10 +4,11 @@ apport (0.34) UNRELEASED; urgency=low
     fails due to access permissions. This happens if the file does not belong
     to the user calling apport-gtk, but is world-readable (such as ubiquity
     crash reports). If utime() fails, repeatedly open()/close() the file for
-    reading until atime != ctime, or the 1.2s timeout is reached. 
+    reading until atime != ctime, or the 1.2s timeout is reached.
     Closes: LP#72250
+  * apport/python_hook.py: Add unit test, call that in run-tests.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 20 Dec 2006 17:02:47 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 21 Dec 2006 12:16:47 +0100
 
 apport (0.33) feisty; urgency=low
 
